# serializer version: 1
# name: test_most_recent_day_sensor
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent full day',
      'related': list([
        dict({
          'gallons': 1.0,
          'start': '2024-06-20T00:00:00-07:00',
        }),
        dict({
          'gallons': 2.0,
          'start': '2024-06-20T01:00:00-07:00',
        }),
        dict({
          'gallons': 3.0,
          'start': '2024-06-20T02:00:00-07:00',
        }),
        dict({
          'gallons': 4.0,
          'start': '2024-06-20T03:00:00-07:00',
        }),
        dict({
          'gallons': 5.0,
          'start': '2024-06-20T04:00:00-07:00',
        }),
        dict({
          'gallons': 6.0,
          'start': '2024-06-20T05:00:00-07:00',
        }),
        dict({
          'gallons': 7.0,
          'start': '2024-06-20T06:00:00-07:00',
        }),
        dict({
          'gallons': 8.0,
          'start': '2024-06-20T07:00:00-07:00',
        }),
        dict({
          'gallons': 9.0,
          'start': '2024-06-20T08:00:00-07:00',
        }),
        dict({
          'gallons': 10.0,
          'start': '2024-06-20T09:00:00-07:00',
        }),
        dict({
          'gallons': 11.0,
          'start': '2024-06-20T10:00:00-07:00',
        }),
        dict({
          'gallons': 12.0,
          'start': '2024-06-20T11:00:00-07:00',
        }),
        dict({
          'gallons': 13.0,
          'start': '2024-06-20T12:00:00-07:00',
        }),
        dict({
          'gallons': 14.0,
          'start': '2024-06-20T13:00:00-07:00',
        }),
        dict({
          'gallons': 15.0,
          'start': '2024-06-20T14:00:00-07:00',
        }),
        dict({
          'gallons': 16.0,
          'start': '2024-06-20T15:00:00-07:00',
        }),
        dict({
          'gallons': 17.0,
          'start': '2024-06-20T16:00:00-07:00',
        }),
        dict({
          'gallons': 18.0,
          'start': '2024-06-20T17:00:00-07:00',
        }),
        dict({
          'gallons': 19.0,
          'start': '2024-06-20T18:00:00-07:00',
        }),
        dict({
          'gallons': 20.0,
          'start': '2024-06-20T19:00:00-07:00',
        }),
        dict({
          'gallons': 21.0,
          'start': '2024-06-20T20:00:00-07:00',
        }),
        dict({
          'gallons': 22.0,
          'start': '2024-06-20T21:00:00-07:00',
        }),
        dict({
          'gallons': 23.0,
          'start': '2024-06-20T22:00:00-07:00',
        }),
        dict({
          'gallons': 24.0,
          'start': '2024-06-20T23:00:00-07:00',
        }),
      ]),
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_full_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1135.6',
  })
# ---
# name: test_most_recent_hour_sensor
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent hour',
      'related': list([
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T19:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T20:00:00-07:00',
        }),
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T21:00:00-07:00',
        }),
        dict({
          'gallons': 14.3,
          'start': '2024-06-19T22:00:00-07:00',
        }),
      ]),
      'start': '2024-06-19T22:00:00-07:00',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '54.1',
  })
# ---
# name: test_most_recent_hour_sensor_with_none_in_data
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent full day',
      'related': list([
        dict({
          'gallons': 1.0,
          'start': '2024-06-20T00:00:00-07:00',
        }),
        dict({
          'gallons': 2.0,
          'start': '2024-06-20T01:00:00-07:00',
        }),
        dict({
          'gallons': 3.0,
          'start': '2024-06-20T02:00:00-07:00',
        }),
        dict({
          'gallons': 4.0,
          'start': '2024-06-20T03:00:00-07:00',
        }),
        dict({
          'gallons': 5.0,
          'start': '2024-06-20T04:00:00-07:00',
        }),
        dict({
          'gallons': 6.0,
          'start': '2024-06-20T05:00:00-07:00',
        }),
        dict({
          'gallons': 7.0,
          'start': '2024-06-20T06:00:00-07:00',
        }),
        dict({
          'gallons': 8.0,
          'start': '2024-06-20T07:00:00-07:00',
        }),
        dict({
          'gallons': 9.0,
          'start': '2024-06-20T08:00:00-07:00',
        }),
        dict({
          'gallons': 10.0,
          'start': '2024-06-20T09:00:00-07:00',
        }),
        dict({
          'gallons': 11.0,
          'start': '2024-06-20T10:00:00-07:00',
        }),
        dict({
          'gallons': 12.0,
          'start': '2024-06-20T11:00:00-07:00',
        }),
        dict({
          'gallons': 13.0,
          'start': '2024-06-20T12:00:00-07:00',
        }),
        dict({
          'gallons': 14.0,
          'start': '2024-06-20T13:00:00-07:00',
        }),
        dict({
          'gallons': 15.0,
          'start': '2024-06-20T14:00:00-07:00',
        }),
        dict({
          'gallons': 16.0,
          'start': '2024-06-20T15:00:00-07:00',
        }),
        dict({
          'gallons': 17.0,
          'start': '2024-06-20T16:00:00-07:00',
        }),
        dict({
          'gallons': 18.0,
          'start': '2024-06-20T17:00:00-07:00',
        }),
        dict({
          'gallons': 19.0,
          'start': '2024-06-20T18:00:00-07:00',
        }),
        dict({
          'gallons': 20.0,
          'start': '2024-06-20T19:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-20T20:00:00-07:00',
        }),
        dict({
          'gallons': 22.0,
          'start': '2024-06-20T21:00:00-07:00',
        }),
        dict({
          'gallons': 23.0,
          'start': '2024-06-20T22:00:00-07:00',
        }),
        dict({
          'gallons': 24.0,
          'start': '2024-06-20T23:00:00-07:00',
        }),
      ]),
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_full_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1056.1',
  })
# ---
# name: test_sensors_for_zero_gallons
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent full day',
      'related': list([
      ]),
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_full_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors_for_zero_gallons.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent hour',
      'related': list([
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T19:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T20:00:00-07:00',
        }),
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T21:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T22:00:00-07:00',
        }),
      ]),
      'start': '2024-06-19T22:00:00-07:00',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
